--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,11 @@
     <title>TDS Escape - Прототип</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Подключение Three.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r133/three.min.js"></script>
     <!-- Подключение GLTFLoader для загрузки моделей -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/loaders/GLTFLoader.js"></script>
     <!-- Подключение Rapier.js для физики -->
-    <script src="https://cdn.jsdelivr.net/npm/@dimforge/rapier3d@0.11.2/rapier3d.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@dimforge/rapier3d-compat@0.11.2/rapier.min.js"></script>
     <!-- VK Bridge для интеграции с ВКонтакте -->
     <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
 </head>
@@ -43,6 +43,7 @@
         </div>
     </div>
     
-    <!-- Скрипт будет загружен webpack-ом -->
+    <!-- Загрузка основного модуля -->
+    <script type="module" src="./src/core/game.js"></script>
 </body>
 </html>
