--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <!-- Three.js и другие библиотеки -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r133/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="libs/rapier/rapier.min.js"></script>
+    <script src="libs/rapier/rapier.js"></script>
 </head>
 <body>
     <div id="game-container">
