--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/loaders/GLTFLoader.js"></script>
     
     <!-- Загрузка Rapier -->
-    <script src="libs/rapier/rapier.js" type="module"></script>
+    <script src="libs/rapier/rapier.js"></script>
     <script src="libs/rapier-loader.js"></script>
 </head>
 <body>
